--- a/sales.html
+++ b/sales.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
-    <title>Salmon Cookies</title>
+    <title>Sales</title>
 </head>
-<body>
+<body id="sales-page">
     <nav>
-        <a href="./sales.html">Sales</a>
+        <a href="./index.html">Home</a>
     </nav>
-    <h1>Pats Salmon Cookies</h1>
-    <img src="./img/salmon.png" alt="Salmon">
+    <div id="stores"></div>
+    <script src="./js/app.js"></script>
 </body>
 </html>
