some styling done

--- a/index.html
+++ b/index.html
@@ -14,5 +14,22 @@
     </nav>
     <h1>Pats Salmon Cookies</h1>
     <img src="./img/salmon.png" alt="Salmon">
+    <div id="content">
+        <div id="about">
+            <h2>Our Story</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium consequatur perferendis error ullam, nulla pariatur fuga ab, optio placeat neque quod possimus voluptatem, molestiae magni veniam? Quibusdam ex quasi ipsam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos saepe in, cupiditate nesciunt facilis rem molestiae magnam asperiores, officiis sunt laudantium, qui illo tenetur non excepturi id culpa. Dignissimos, culpa.</p>
+        </div>
+        <div id="locations">
+            <h2>Locations</h2>
+            <ul>
+                <li>First & Pike</li>
+                <li>Seatac</li>
+                <li>Seattle Center</li>
+                <li>Alki</li>
+                <li>Capitol Hill</li>
+            </ul>
+
+        </div>
+    </div>
 </body>
 </html>
