--- a/sales.html
+++ b/sales.html
@@ -8,10 +8,13 @@
     <title>Sales</title>
 </head>
 <body id="sales-page">
-    <nav>
+    <!-- <nav>
         <a href="./index.html">Home</a>
-    </nav>
+    </nav> -->
     <div id="stores"></div>
+    <div>
+        <table id="table"></table>
+    </div>
     <script src="./js/app.js"></script>
 </body>
 </html>
