fixed nav issue

--- a/sales.html
+++ b/sales.html
@@ -8,9 +8,9 @@
     <title>Sales</title>
 </head>
 <body id="sales-page">
-    <!-- <nav>
+    <nav>
         <a href="./index.html">Home</a>
-    </nav> -->
+    </nav>
     <div id="stores"></div>
     <div>
         <table id="table"></table>
