--- a/sales.html
+++ b/sales.html
@@ -12,7 +12,7 @@
         <a href="./index.html">Home</a>
     </nav>
     <div>
-        <form id="new-store-form" action="./js/app.js" onsubmit="newStoreOnSubmit()">
+        <form id="new-store-form" onsubmit="newStoreOnSubmit(event)">
             <fieldset>
                 <legend>Create New Store</legend>
                 Location: <input type="text" name="location" required><br>
