photos page added

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/index-style.css">
     <title>Salmon Cookies</title>
 </head>
 <body>
     <nav>
         <a href="./sales.html">Sales</a>
+        <a href="./photos.html">Photos</a>
     </nav>
     <h1>Pats Salmon Cookies</h1>
     <img src="./img/salmon.png" alt="Salmon">
@@ -22,11 +24,41 @@
         <div id="locations">
             <h2>Locations</h2>
             <ul>
-                <li>First & Pike</li>
-                <li>Seatac</li>
-                <li>Seattle Center</li>
-                <li>Alki</li>
-                <li>Capitol Hill</li>
+                <li>First & Pike
+                    <ul>
+                        <li>Address: 111 1st and Pike, Seattle, WA</li>
+                        <li>Phone: 800-888-8889</li>
+                        <li>Hours: 6:00am - 8:00pm</li>
+                    </ul>
+                </li>
+                <li>Seatac
+                    <ul>
+                      <li>Address: 111 8th Ave, Seatac, WA</li>
+                      <li>Phone: 800-888-8899</li>
+                      <li>Hours: 6:00am - 8:00pm</li>
+                    </ul>
+                </li>
+                <li>Seattle Center
+                    <ul>
+                        <li>Address: 111 10th Ave, Seattle, WA</li>
+                        <li>Phone: 800-888-8999</li>
+                        <li>Hours: 6:00am - 8:00pm</li>
+                      </ul>
+                </li>
+                <li>Alki
+                    <ul>
+                        <li>Address: 111 11th Ave, Alki, WA</li>
+                        <li>Phone: 800-888-9999</li>
+                        <li>Hours: 6:00am - 8:00pm</li>
+                      </ul>
+                </li>
+                <li>Capitol Hill
+                    <ul>
+                        <li>Address: 111 12th Ave, Seattle, WA</li>
+                        <li>Phone: 800-889-9999</li>
+                        <li>Hours: 6:00am - 8:00pm</li>
+                      </ul>
+                </li>
             </ul>
 
         </div>
