--- a/sales.html
+++ b/sales.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/sales-style.css">
     <title>Sales</title>
 </head>
 <body id="sales-page">
     <nav>
         <a href="./index.html">Home</a>
+        <a href="./photos.html">Phots</a>
     </nav>
     <div>
         <form id="new-store-form" onsubmit="newStoreOnSubmit(event)">
